*Empty MediaWiki Message*

--- a/Buula_xaaji.mw
+++ b/Buula_xaaji.mw
@@ -18,13 +18,13 @@ Degmadan [[Buula xaaji]] waxa haatan gacanta ku haya [[Urur]]<nowiki/>ka Islaami
 
 
 '''Beesha deegaanka'''
-----Degmada Buula Xaaji waxa ku dhaqan beesha  [[Cawramale]] oo ka mid ah beelwaynta [[Warsangali]] waxayna deegaan ku yihiin badanaa gobolada koonfurta soomaaliya, gaar ahaan gobolada [[Jubbada Hoose]], [[Jubbada Dhexe]], [[Baay]], [[Bakool]], [[Gedo]], [[Shabeellaha Dhexe]] , [[Shabeellaha Hoose]] , [[Sanaag]] [[Hiiraan]] ,iyo [[Banaadir]].
+----Degmada Buula Xaaji waxa ku dhaqan beesha  Geel jacel-Doqondiida oo ka mid ah beelwaynta Saransoor waxayna deegaan ku yihiin badanaa gobolada koonfurta soomaaliya, gaar ahaan gobolada [[Jubbada Hoose]], [[Jubbada Dhexe]], [[Baay]], [[Bakool]],  [[Shabeellaha Dhexe]] , [[Shabeellaha Hoose]] , [[Hiiraan]] ,i
 
 
 <br />'''Abtirsiga beesha'''
-----Beesha Cawramale waxay u abtisadaan sida soo socota
+----Beesha Doqondiide waxay u abtisadaan sida soo socota
 
-[[Cawramale]]•Cismaan•Ibraahim•xamar gale•Dhidhiin•Kooge•warma'eke•[[Warsangali]]• [[Maxamuud harti]]•Koombe•Kablalax•[[Daarood]]
+Doqondiide •Sooraanle•Ibraahim•Gaaljacel•Saransoor•Mataan•Rayila•Garjanta Gardheere Samaale
 [[Category:Buula Xaaji]]
 [[Category:Jubbada hoose]]
 [[Category:Kismaayo]]
