--- a/Buula_xaaji.mw
+++ b/Buula_xaaji.mw
@@ -24,7 +24,7 @@ Degmadan [[Buula xaaji]] waxa haatan gacanta ku haya [[Urur]]<nowiki/>ka Islaami
 <br />'''Abtirsiga beesha'''
 ----Beesha Doqondiide waxay u abtisadaan sida soo socota
 
-Doqondiide •Sooraanle•Ibraahim•Gaaljacel•Saransoor•Mataan•Rayila•Garjanta Gardheere Samaale
+Doqondiide •Sooraanle•Gaaljacel•Saransoor•Mataan•Rayila•Garjanta Gardheere Samaale
 [[Category:Buula Xaaji]]
 [[Category:Jubbada hoose]]
 [[Category:Kismaayo]]
