*Empty MediaWiki Message*

--- a/Badda_Soomaaliyeed.mw
+++ b/Badda_Soomaaliyeed.mw
@@ -55,4 +55,67 @@
 
 '''Badda Soomaal''' waa bad oo bariga dalka [[Soomaal]] ku taal. 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+==Maqaalaha==
+The '''Somali Sea'''  ({{lang-so|Badda Soomaaliyeed}}, {{lang-ar|بحر الصومال}}: [[Seychellois Creole]]: ''La lanmer Somali'') is a [[marginal sea]] between the eastern coast of [[Somalia]] and [[Seychelles]]. It shares borders with the entire coastlines of the Somali regional states of [[Galmudug]], [[Hirshabelle]], [[South_West_State_of_Somalia|South West]], [[Jubaland]], part of [[Puntland]] as well as the [[Mahé, Seychelles|Mahe]] island of Seychelles and other [[Seychellois]] islands such as [[La Digue]] and [[Curieuse]].
+
+===Scope===
+The Somali Sea is bordered on the west by Somalia's eastern coastline, to the north by the [[Guardafui Channel]] which begins along the projection of Ras Hafun and its parallel of latitude, to the east by the eastern border of the tectonic [[Somali Plate]] or along 55th 28′E meridian east along Seychelles' Mahe island, and bordered to the south by Somalia's equidistant line maritime border.<ref>McLaughlin, Rob. "The Continuing Conundrum of the Somali Territorial Sea and Exclusive Economic Zone." The International Journal of Marine and Coastal Law 30.2 (2015): 305-334.</ref><ref>Xasan-roodhiile, Abwaan Sacad Axmed. "TOOYASHO IYO TOOGOBEEL." Bildhaan: An International Journal of Somali Studies 15.1 (2016): 6.</ref>
+
+===History===
+The Somali Sea has been referred to by numerous names throughout history, including "Azania Sea" and "[[Erythraean Sea]]".<ref>Kirwan, Lawrence P. "Rhapta, metropolis of Azania." AZANIA: Journal of the British Institute in Eastern Africa 21.1 (1986): 99-104.
+</ref> The southern flanks facing the [[Mozambique Channel]] was historically referred to as "[[Zanj Sea]]".<ref>Chittick, Neville. "Mediaeval Mogadishu." Paideuma (1982): 45-62.
+</ref>
+
+The 2000s and 2010s were turbulent decades for the fisherman who makes a living along the coast of the Somali Sea. This was because of the [[illegal, unreported and unregulated fishing|illegal fishing]] activities of foreign fishing trawlers and fishing vessels who stole on average $300 million worth of fish each year according to a UN report.<ref>http://www.geeskaafrika.com/27911/the-impact-of-somali-fishermen-on-indian-ocean-rim/</ref> The participation of Somali Admiral Farah Omar Ahmed with his coast guard boats in the coastal region during the years between 2012 and 2014 were a major factor in dislodging Al-Shabaab from the [[Jubaland]] region.<ref>Farah, Qasim Hersi. "The Stability/Sustainability Dynamics: The Case of Marine Environmental Management in Somalia." (2016).</ref> Admiral Ufurow, a commander of the [[Somali Navy]] was assigned to deal with the dumping of toxic waste as well as illegal fishing by foreign nations that was occurring in the Somali Sea.<ref>https://neptunep2pgroup.com/somalia-somali-navy-vows-to-eradicate-illegal-fishing-commander/</ref> The subsequent commander Olujog, who was inaugurated in 2018, was tasked with preventing trade by al-Shabaab, and disrupting their economic viability by securing the coastline.<ref>Nyman, Elizabeth. "Techno-optimism and ocean governance: New trends in maritime monitoring." Marine Policy 99 (2019): 30-33.</ref>
+
+As of the 2010s, there have been increasing reports of Gulf Arab states such as the UAE and Qatar being engaged in a power struggle for access to ports in the Somali Sea. Due to insurance costs against piracy, navigation through Somali Sea waters by trading and commercial vessels have some of the highest costs in the world.<ref>Kabandula, Abigail, and Timothy M. Shaw. "Security and Development in the Horn of Africa: Emerging Powers, and Competing Regionalisms." (2018).</ref> In 2014, Somalia's government sued Kenya for violating its maritime borders and engaging what is purports to be illegal drilling activities in the [[Exclusive economic zone of Somalia]]; the next year, Mogadishu took the case to the International Court of Justice.<ref>https://www.bbc.co.uk/news/world-africa-33505310</ref>
+
+===Islands===
+The Somali Sea contains the following islands: 
+*[[Coëtivy Island]] (Seychelles)
+*[[La Digue]] (Seychelles)
+* [[Curieuse]] (Seychelles)
+*[[Jasiirada Chovaye]] 
+*[[Jasiirada Chula]] 
+*[[Jasiirada Koyama]]
+*[[Mahé, Seychelles]]
+
+===Gallery===
+<gallery mode="packed" heights="200px">
+File:Somali Sea map.png|The Somali Sea at the bottom
+File:Milky sea nightcolor5x5.jpg|Milky sea effect off the coast of [[Somalia]] in the Somali Sea.
+</gallery>
+
+===Ecology===
+The central region of the Somali Sea has a 250 kilometer stretch of a luminous phenomenon whereby large areas of seawater appears to glow brightly enough at night to be seen by satellites which some scientists have attributed to bioluminescent bacteria or dinoflagellates, causing the sea to uniformly display a light blue glow at night.<ref>Lapota, David, et al. Observations and measurements of planktonic bioluminescence in and around a milky sea. NAVAL OCEAN SYSTEMS CENTER SAN DIEGO CA, 1988.</ref>
+
+==References==
+{{reflist}}
+
+
+[[Category:Soomaaliya]]
 [[Category:dhaqan]]
