--- a/Lionel_Messi.mw
+++ b/Lionel_Messi.mw
@@ -1,7 +1,7 @@
 {{Infobox football biography
 | name        = Lionel Messi
 | image       = Lionel_Messi_20180626.jpg
-| caption     = Messi playing for [[FC Barcelona|Barcelona]] in [[2018]]
+| caption     = Messi playing for [[Arsenal|Arsena]] in [[2018]]
 | fullname    = Lionel Andrés Messi<ref name="barca">{{cite web | url = http://www.fcbarcelona.com/football/first-team/staff/players/messi/sheet | title = Messi – Lionel Andrés Messi – Sheet <nowiki>|</nowiki> FC Barcelona | accessdate =6 January 2012 | publisher=FC Barcelona}}</ref>
 | birth_date  = {{birth date and age|df=y|1987|6|24}}<ref name="barca" />
 | birth_place = [[Rosario, Santa Fe|Rosario]], Argentina<ref name="barca" />
