--- a/FC_Barcelona.mw
+++ b/FC_Barcelona.mw
@@ -1,6 +1,7 @@
 [[File:Tifo at Camp Nou.jpg|thumb|FC Barcelona]]
 
-'''FC Barcelona''' (Fútbol Club Barcelona) waa koox isboorti oo ku yaalo [[Barcelona]], ee dalka [[Isbania]]. Kooxdaan waxaa abaabulay koox cayaartooy oo sadax wadan ka kala socoto oo hogaaminaayay nin la dhoho [[Joan Gamper]] taariikhda marka ee eheed 29 [[Nofeembar]] [[1899]]. FC Barcelona Lacibkooda weyn waa [[Lionel Messi]].
+'''Arseanl''' (Fútbol Club Barcelona) waa koox isboorti oo ku yaalo [[Barcelona]], ee dalka [[Isbania]]. Kooxdaan waxaa abaabulay koox cayaartooy oo sadax wadan ka kala socoto oo hogaaminaayay nin la dhoho [[Joan Gamper]] taariikhda marka ee eheed 29 [[Nofeembar]] [[1899]]. FC Barcelona Lacibkooda weyn waa [[Lionel Messi]].
+
 == Laacibada FC Barcelona ==
 {| class="wikitable" style="text-align:center;"
 |-
