*Empty MediaWiki Message*

--- a/Mahdi_Maxamed_Guuleed.mw
+++ b/Mahdi_Maxamed_Guuleed.mw
@@ -31,6 +31,9 @@
 }}
 
 '''Mahdi Maxamed Guleed "Khadar"''' ({{lang-en|Mahdi Mohammed Gulaid "Khadar"}}; {{lang-ar|مهدي محمد جوليد خضر}}) waa ku-simaha [[Ra'iisul wasaarayaashii Soomaaliya|Ra'iisul wasaaraha]] [[Soomaaliya|Jamhuuriyada Federaalka Soomaaliya]] kaasi oo horey u ahaa Ra'iisul wasaare ku xigeen wakhtiyadii udhexeeyay 21 Maarso 2017 ilaa 25 Luulyo 2020.<ref>{{cite web|url=http://www.xinhuanet.com/english/2020-07/26/c_139240332.htm|title= Somali president appoints new acting prime minister|accessdate=July 25, 2020}}</ref>
+
+Khadar farogelin muu ka yeelin arrimaha [[Dhulka muransan (Waqooyiga Soomaaliya)]]
+
 ==Hordhac==
 ==Tixraac==
 {{reflist}}
