*Empty MediaWiki Message*

--- a/Bariire.mw
+++ b/Bariire.mw
@@ -1,4 +1,4 @@
-'''Bariire''' waa degaan ku yaala gobolka [[Shabeelaha Hoose]] Afgooye wuxuu u jiraa ilaa 30 km, Waa dagmo aad uyar oo wali taro koob rasmi ah lagu sameyn.
+'''Bariire''' waa degaan ku yaala gobolka [[Shabeelaha Hoose]] Afgooye wuxuu u jiraa ilaa 30 km, Waa dagmo aad uyar oo wali tiro koob rasmi ah laguma sameyn.
 
 
 
