Removing [[:c:File:Pumpuang_Duangjan_portrait.jpg|Pumpuang_Duangjan_portrait.jpg]], it has been deleted from Commons by [[:c:User:JuTa|JuTa]] because: per [[:c:Commons:Deletion requests/File:Pumpuang Duangjan portrait.jpg|]].

--- a/Pumuang_Duangjan.mw
+++ b/Pumuang_Duangjan.mw
@@ -1,6 +1,6 @@
 {{Infobox person
 | name = Pumpuang Duangjan
-| image =Pumpuang Duangjan portrait.jpg
+| image =
 | image_size = 210px
 | caption = 
 | birth_name = Ramphueng Chit-han 
