--- a/Si'iid_Harti.mw
+++ b/Si'iid_Harti.mw
@@ -29,12 +29,14 @@ Jilibada reer darawiish ee guud waa Faarax Garad, Maxamud garad iyo Bah Nugal.
 Jilibada reer darawiish ee ugu weyn waa Ugaadhyahan. Jibalada reer darawiish labaad ee ugu weyn waa Axmed garaad. Jilibada reer darawiish ee saddexaad ee ugu weyn waa Jama Siyad iyo Qayaad. Jilibada reer darawiiish ee afaraad ee ugu weyn waa Reer Hagar iyo Hayaag. Jilibada reer darawiish ee shanaad ee ugu weyn waa Baharsame.
 
 ==Shuruudaha==
+[[File:Garaadka guud ee reer darawiish garaad jaamac garaad cali.jpg|thumb|garaadka guud ee reer darawiish garaad jaamac garaad cali]]
+
 Shuruudaha Dhulbahante ama Beesha Darawiish waxaa ka mid ah:
+*Shuruudaha garaadka guud ee reer darawiish
 *Shuruudaha bandhigta Ismail Mire
 *Shuruudaha qanuunka [[Sayid Mah]]
 *Shuruudaha guud ee wadamada Soomaaliyeed
 *Shuruudaha [[Urwayni]]
-
 
 ==Sidoo kale fiiri==
 *[[Soomaali|Beelaha Soomaalida]]
