*Empty MediaWiki Message*

--- a/Garaadtooyada_reer_darawiish.mw
+++ b/Garaadtooyada_reer_darawiish.mw
@@ -1,4 +1,54 @@
 [[File:Garaadaha Guud Reer Darawiish.png|thumb|garaadaha guud reer darawiish]]
 Garaadada (af-ingiriis: Dhulbahante garaadship) waa boqortooyo oo [[reer darawiish]] ah uu dhexeysey sanadaha 1530 ilaa 1895 oo caasimada ahayd Buuhoodle. oo ka tirsan abtirsiga Baharsame. Garaadada Dhulbahante waxaa dawladda kuxigeenka ahayd dawladda [[Darwiish]].
 
+==Garaadada guud ee reer darawiish==
+== Garaads ==
+{| class="wikitable sortable"
+|- align=center
+! # !! Garaad !! [[Reign]] !! Notes
+|-
+|align=center| 1 || align=center| [[Shirshoore]] ||  align=center| 1530-1550 || Established the Dhulbahante garaadship
+|-
+|align=center| 2 || align=center| Garaad Farah ||  align=center| 1550-1590 || 
+|-
+|align=center| 3 || align=center| Garaad Abdalla II||  align=center| 1590-1600 || 
+|-
+|align=center| 4 || align=center| Garaad Yasin ||  align=center| 1600-1620 || 
+|-
+|align=center| 5 || align=center| Baharsame ||  align=center| 1620-1650 || Real name was Garad Mohamed I
+|-
+|align=center| 6 || align=center| Jabane ||  align=center| 1650-1685 || Real name was Garad Mohamud
+|-
+|align=center| 7 || align=center| Garaad Ali I ||  align=center| 1685-1708 || 
+|-
+|align=center| 8  || align=center| Garaad Mohamud II ||  align=center| 1708-1734 || 
+|-
+|align=center| 9 || align=center| Garaad Mohamed II ||  align=center| 1734-1760 || 
+|-
+|align=center| 10 || align=center| Garaad Mohamud III ||  align=center| 1760-1780 || 
+|-
+|align=center| 11 || align=center| [[Garaad Ali II]] ||  align=center| 1780-1802 || 
+|-
+|align=center| 12 || align=center| [[Garaad Mohamed III]] ||  align=center| 1802-1825 || 
+|-
+|align=center| 13 || align=center| [[Garaad Ali III]] ||  align=center| 1825-1840 || 
+|-
+|align=center| 14 || align=center| [[Korebas]] ||  align=center| 1840-1863 || Also called the warrior garaad. His real name was Garaad Mohamud IV 
+|-
+|align=center| 15 || align=center| [[Garad Ali IV]] ||  align=center| 1863-1899 || 
+|-
+|align=center| 16 || align=center| [[Garaad Mohamed IV]] ||  align=center| 1901-1918 || Contemporary of Sayyid Hassan
+|-
+|align=center| 17 || align=center| [[Aar Dheel]] ||  align=center| 1921-1923 || 
+|-
+|align=center| 18 || align=center| [[Garaad Jama I]] ||  align=center| 1923-1966 || 
+|-
+|align=center| 19 || align=center| [[Garad Ali V]] ||  align=center| 1966-1985 || 
+|-
+|align=center| 20 || align=center| [[Garaad Abdiqani]] ||  align=center| 1985-2006 || 
+|-
+|align=center| 21 || align=center| [[Jama Garad Ali]] ||  align=center| 2006-present || Current garaad
+|}
+
+
 [[Category:Taariikh]]
