*Empty MediaWiki Message*

--- a/Nayjeeriya.mw
+++ b/Nayjeeriya.mw
@@ -337,7 +337,7 @@ Nigeria waxaa badanaa lagu magacaabaa "Giant Africa", iyada oo ku xiran dadkeeda
 
 
 
-==sido kale fiiri==
+==Naygeriya waa wadanka labaad oo ugu argixsda badan ilaa iyo 2009==
 
 
 == Tixraacyada ==
