--- a/Yaaqshiid.mw
+++ b/Yaaqshiid.mw
@@ -234,6 +234,7 @@ Suuqa Juungal
 * Dugsiga Amajad
 * Dugsiga Hiigsi
 * Dugsiga Haarun alrashiid
+*Dugsiga hoose/dhexe ee Iman
 
 == Xarumaha Dawladda ==
 masaajidda
