*Empty MediaWiki Message*

--- a/Suul.mw
+++ b/Suul.mw
@@ -1,6 +1,5 @@
-[[File:Suul(1).jpg|thumb|suul]]
+[[File:Suul(1).jpg|Suul Ayan Ka Fudud |suul]]
 '''Suul''' ({{lang-en|thumb}}; {{lang-ar|إبهام}}) waa xubin ka mid ah [[far]]aha shanta ah ee ku yaala [[Gacan|gacmaha]] iyo lugaha [[dad]]ka iyo in badan oo [[xayawaan]]ka ka mid ah. Suulku waa farta koowaad ee shanta farood. Sidoo kale, suulku waa farta ugu awooda badan ee ugu dhumucda iyo qarada weyn dhamaan faraha.
-
 
 ==Faraha Dadka==
 {| class="infobox" style="text-align: center;"
