*Empty MediaWiki Message*

--- a/Boqortooyo.mw
+++ b/Boqortooyo.mw
@@ -1,4 +1,5 @@
 [[File:King George VI.jpg|thumb|[[George VI]]]]
+[[File:Garad jama garad ali.jpg|thumb|left|garad jama garad cali waa garaadka guud ee [[reer darawiish]].]]
 
 '''Boqortooyo''' waa [[Qoys]], [[taariikh]] leh, oo amar ku bixiso Dawladdaha. Boqortooyada waxay ka sareysaa Madaxda. Wadamada qaarkood waxayna leeyihiin Boqortooyo.
 Sida wadamada [[carab]]ta, [[afrika]]da, [[yurub]]iyaanka, ama [[aasiya]]ha. Laakiin waxaa ka badan Kuwa madaxda leh. Wadamada Boqortooyada haysto, waxay leeyihiin ra'iisul wasaare, oo hogaamiyo wadanka. Badanaa Boqortooyada, masoofaragashato wadanka ciidankiisa ama dhinaca dhaqaalaha. Waa qoys degen.
