--- a/Garaad_Jaamac_Garaad_Cali.mw
+++ b/Garaad_Jaamac_Garaad_Cali.mw
@@ -1,4 +1,25 @@
-[[File:Garaadka guud ee reer darawiish garaad jaamac garaad cali.jpg|thumb|garaadka guud ee reer darawiish garaad jaamac garaad cali]]
-Garaad Jaamac Garaad Cali waa garaadka guud dhanka [[reer darawiish]].
+{{Infobox person
+|name        = Garaad Jaamac Garaad Cali
+|image       =
+|citizenship = Soomaali 
+|birth_date  = 
+|birth_place = [[Laascaanood]], [[Soomaliya]]
+|occupation  = Madax dhaqameed
+|known_for   = Garaadka guud ee [[Dhulbahante]]
+|networth    =
+|spouse      =
+|children    =
+}}
+'''Garaad Jaamac Garaad Cali''' waa  waa madax dhaqameed ahna garaadka guud ee qabiilka [[Dhulbahante]]. waxaa dhalay garaadkii ka horreyey Garaad Cabdiqani, waxaa loogu caleemo saaray Magaalada [[Laascaanood]] taariikhda marka ee eheed 22 may 2006<ref>http://www.biyokulule.com/garaad%20jaamac.htm</ref>, Munaasabadda caleemo saarkiisa waxaa ka soo qayb galay dad aad u fara badan oo ay ku jiraan siyaasiyiin sarsare oo ka soo jeeda Dowladda Kumeel gaarka ah ee Soomaaliya, Somaliland iyo Puntland.
 
-[[category:boqor]]
+
+==Taariikh nololeed==
+
+
+
+
+
+
+{{gumud}}
+==Tixraac==
+[[category:Dhulbahante]]
