*Empty MediaWiki Message*

--- a/Dhulka_muransan_(Waqooyiga_Soomaaliya).mw
+++ b/Dhulka_muransan_(Waqooyiga_Soomaaliya).mw
@@ -1,3 +1,4 @@
+{{caddayn u baahan}}
 Dhulka muransan ee waqooyiga Soomaaliya waxaa weeyaan heshiis ka jirin maamulnimada goobahaas. Sharaxayn uu dawladda Soomaaliyeed soo saaray 2019kii wuxuu bandhiggay dhulka ee laga muransan yahay waxaa ka mid ah:
 
 *Degmadda Fiqifuliye
