waxaa ka tirtiray, qoraal si qaldan u qoran.

--- a/Suul.mw
+++ b/Suul.mw
@@ -1,53 +1,14 @@
-[[File:Suul(1).jpg|Suul Ayan Ka Fudud |suul]]
-'''Suul''' ({{lang-en|thumb}}; {{lang-ar|إبهام}}) waa xubin ka mid ah [[far]]aha shanta ah ee ku yaala [[Gacan|gacmaha]] iyo lugaha [[dad]]ka iyo in badan oo [[xayawaan]]ka ka mid ah. Suulku waa farta koowaad ee shanta farood. Sidoo kale, suulku waa farta ugu awooda badan ee ugu dhumucda iyo qarada weyn dhamaan faraha.
+'''Suul''' waa xubin ka mid ah [[far]]aha shanta ah ee ku yaala [[Gacan|gacmaha]] iyo lugaha [[dad]]ka iyo [[xayawaan]]ka qaar sida daanyeerka. Suulku waa farta koowaad ee shanta farood. Sidoo kale, suulku waa farta ugu awooda badan faraha.
 
-==Faraha Dadka==
-{| class="infobox" style="text-align: center;"
-|style="background:#ccccff" | '''[[Far]]aha [[Dad]]ka''' 
-|-
-| [[File:Hand left.svg|center|100px]]
-|-
-| style="font-size: smaller;" |
-[[Suul]] {{•}} [[Fardheer]] {{•}} [[Fardhexo]] {{•}} [[Faraanti galis (far)|Farta Faraantigelis]] {{•}} [[Faryar]]
-|-
-|}<noinclude>
+Badanaa dadka caalamka waxaa dhaqan u ah markii suulka  kor loo jeediyo, macnaheeda waa fiican, markii hoos loo jeediyo waa wax xun.
 
-'''Far''' ({{lang-en|finger}}; {{lang-ar| أصبع}}) (wadar ahaan '''faro'''), waa [[xubin|xubno]] ka tirsan [[gacan]]ta [[dad]]ka iyo in badan oo [[xayawaan]]ka ka mid ah. Sida caadiga ah dadku waxay leeyihiin 20 farood, kuwaasi oo ku kala yaala labada gacmood iyo labada lugood. Gacan kasta iyo lug kasta waxay leeyihiin shan farood oo iskugu jira: [[Suul]], [[Murdiso (Murugsato)|fardheero]] (murdiso), [[Far-dhexo (Fardhexaad)|fardhexo]], [[Faraanti galis (faadumo)|faraantigalis]] (farta faadumo), iyo [[Far yareey|faryaro]].
 
-==Faraha Gacmaha==
-===Suul===
-[[File:Suul(1).jpg|thumb|suul]]
-'''Suul''' ({{lang-en|thumb}}; {{lang-ar|إبهام}}) waa xubin ka mid ah [[far]]aha shanta ah ee ku yaala [[Gacan|gacmaha]] iyo lugaha [[dad]]ka iyo in badan oo [[xayawaan]]ka ka mid ah. Suulku waa farta koowaad ee shanta farood. Sidoo kale, suulku waa farta ugu awooda badan ee ugu dhumucda iyo qarada weyn dhamaan faraha.
-===Fardheero===
-[[File:Murdiso1.jpg|thumb|murdiso ama murugsato]]
-'''Farta Murdiso''' ({{lang-en|''index finger''}}; {{lang-ar|السبابة}}) sidoo kale loo yaqaano "'''''Fardheer'''''" iyo "'''''Murugsato'''''", waa [[far]]ta labaad ee ka mid ah shanta [[far]]ood ee [[dad]]ka iyo in badan oo [[xayawaan]]ka ka mid ah. Sidoo kale waa farta u dhexaysa [[suul]]ka iyo [[Far-dhexo (Fardhexaad)|fardhexada]].
-
-===Fardhexo===
-[[File:Fardhexo.jpg|thumb|fardhexo]]
-'''Fardhexo'''  ({{lang-ar|الوسطى}}; {{lang-en|middle finger}}) waa [[far]]ta [[sadex]]aad ee [[gacan]]ta [[dad]]ka. Fartani waxay u dhexaysaa [[Murdiso (Murugsato)|murdisada]] (murugsato) iyo farta faadumo [[Faraanti galis (faadumo)|(faraanti galis]]), sida badan waa farta ugu dheer faraha.
-
-Fartaan iyo [[suul]]ka markii la isku cadaadiyo ka dibna la sii daayo waxaa ka dhasha dhawaq dheer, oo loo adeegsado soo jeedin ama baraarujinta cid loo dan leeyahay taasi oo loo yaqaano '''Suuldhabaale''' (en: snapping).<ref>[[:en:Finger_snapping|https://en.wikipedia.org/wiki/Finger_snapping]]</ref>
-
-===Faraantigelis===
-[[File:Faadumo ama faraanti galis.jpg|thumb|faraanti galils]]
-'''Farta faraanti galis''' ({{lang-ar|بنصر}}; {{lang-en|''ring finger''}}) (sidoo kale loo yaqaano farta faadumo) waa [[far]]ta afaraad u dhexaysa [[Far-dhexo (Fardhexaad)|far dheexadka]] iyo [[Far yareey|faryareey]]da. Waa farta ugu quruxda badan faraha aadanaha saas ayaana keentay in la galiyo faraantiga ama fargashiga.
-===Faryaro===
-[[File:Faryareey.jpg|alt=far, gacan|thumb|faryaro ama faryareey]]
-'''Faryaro''' ({{lang-ar|خنصر}}; {{lang-en|''Little finger''}}) sidoo kale loo yaqaano ''Faryareey'', waa [[far]]ta shanaad ee faraha ku yaala [[gacan|gacmaha]] iyo [[lug]]aha [[dad]]ka; waxayna ku xigtaa [[Faraanti galis (faadumo)|farta faraanti galis]]. Intaas waxaa dheer, in fartani tahay tan ugu yar faraha ugu wax qabadka yar.
-
-==Sidoo kale fiiri==
-* '''[[Suul]]'''
-* '''[[Murdiso (Murugsato)|Murdiso]] ('''murugsato''')'''
-* '''[[Far-dhexo (Fardhexaad)|far dhexo]]'''
-* '''[[Faraanti galis (faadumo)|faraanti galis]]''' (faadumo)
-* '''[[Far yareey|faryaro]] ('''faryareey)
 
 == Tixraac ==
 {{Reflist}}
 {{Gumud}}
 
-[[Category:Dad]]
-[[Category:jir]][[Category:gacan]]
+[[Category:Faraha]]
 
 
 
