*Empty MediaWiki Message*

--- a/Camilo.mw
+++ b/Camilo.mw
@@ -1,1 +1,2 @@
+[[File:Camilo_in_2019.jpg|thumb|Camilo.]]
 '''Camilo Echeverry Correa''' (Medellín, [[Kolombiya]]; Maarso 16, 1994), oo loo yaqaanay '''Camilo''', waa heesta iyo heesaha reer Colombia.
