--- a/Talk:Faadumo_Maandeeq.mw
+++ b/Talk:Faadumo_Maandeeq.mw
@@ -15,7 +15,8 @@ waxaan walaal cumar seerbiya kaa codsanaa dhamaan heeshaha talantaaliga oo ay ma
 
 waxaan codsanayaa inaan helno heesha maandeeq ay qaaday oo dhan kuwa lagu maqlin iyo kuwa kaleba please cumar seerbiya.
 
-waad mahadsantahiin heestii jaallayaal ma barideen iyo faadum cabdulaahi maandeeq iyo cabdi cali baacalwaan. waxaan ka codsanayaa cumar seerbiya riwaayadaha ay maandeeq meteshay oo dhan heesaheeda oo dhameystiran sababtoo ah waxaad soo galisay riwaayadii aabaheey ka samraye adiga oo aad heesaha u soo galisay oo aan dhameystirneen maandeeq riwaayadaan laba fanaan ay meteshay mar tubeec oo ah sanadkii 1973 iyo cigaal oo ah sanadkii 1974 waana xauustaa anigoo oo aan garin 10 sano oo ay markii ugu horeysay magool la heeseeysay gacanlow laakiin magool ka baxday riwaayada oo ay bedeleen khadiijo fooday marna qalanjo marka waxaa ka dhiman laba hees oo ay qaadayso maandeeq oo ay la qaadayaan marna tubeec marna cigaal ma aheyn heesaha guryosamo iyo durdurkii kaliya marka laba hees ayaa ka dhiman . midda kale riwaayaddii jacayl boob uma baahna oo seddex mar kala meteleen fanaaniinta kala dhinaca gabdhaha maandeeq, magool iyo khadra dahir , ragana tubeec iyo cigaal, marka waxaan u baahanay maandeeq oo qaadayso mininkiinnii, sida sida, neyruus, waqtigu na soo gaar, u hub qaado iyo waanwaan.waxaan kae oo aan baahanay heesaha oo ay maandeeq la qaado gaduudo carwo sida waa aduunyada filim ,wacaneey waaxdeydii midigee oo ay maandeeq la qaadayso amina cabdulaahi . marka maandeeq heesaheeda waa badan yahiin kuwa ay la qaado shankroon, hibo, magool, baxasn, qamar, saado,khadra dahir , zahra axmed iyo kuwa kale. marka heesaha maandeeq waa qayb ka mid qiimaha fanka soomaliyeed waayo codkeeda waa ka duwan yahay hablaha kale waayo waxuu ahaa cod dumar naxariis oo xabeed mac ku jrtay mar uu ka hadlaayey abwaan turaabi codadka dumarka waxuu cadeeyay in marwo mohamed inay aheyd maandeeqdii labaad marka halkaas waxaa ku cad maandeeq inay aheyd boqorada codka hablaha soomaaliyeed, waxaana loo baahan yahay in buug laga qoro waayo waa qiimo weyn oo ka mid tiirarka fanka soomaaliyeed. thanks. waahwaah heesaha faadumo cabdulaahi ay la qaado ragga oo aad u fara badan islamarkaana kuwa ay la qaado hablaha waaberi oo aad u fara badan laga bilaabo ilaa hadda waxaan maqalnay afar hees oo ay la qaado shankaroon , laba hees oo ay la qaado baxsan, amina cabdulaahi iyo zahra axmed oo ay la qaaday labo hees, sidoo kale oo ay maandeeq la qaaday khadra dahir, qalanjo, qamar, saado cali, binti cumar gacal,cadar kaahin,hibo mohamed,magool, duniya, faadumo qasim, caasho cabdow, gaduudo carwo iyo kuwa kale oo badan marka maandeeq meeqa hees ay qaaday jawaabta waa badan yahiin qaraami wadani jacayl. marka waxaan codsaneynaa inaan maqlno kulli thanka
+waad mahadsantahiin heestii jaallayaal ma barideen iyo faadum cabdulaahi maandeeq iyo cabdi cali baacalwaan. waxaan ka codsanayaa cumar seerbiya riwaayadaha ay maandeeq meteshay oo dhan heesaheeda oo dhameystiran sababtoo ah waxaad soo galisay riwaayadii aabaheey ka samraye adiga oo aad heesaha u soo galisay oo aan dhameystirneen maandeeq riwaayadaan laba fanaan ay meteshay mar tubeec oo ah sanadkii 1973 iyo cigaal oo ah sanadkii 1974 waana xauustaa anigoo oo aan garin 10 sano oo ay markii ugu horeysay magool la heeseeysay gacanlow laakiin magool ka baxday riwaayada oo ay bedeleen khadiijo fooday marna qalanjo marka waxaa ka dhiman laba hees oo ay qaadayso maandeeq oo ay la qaadayaan marna tubeec marna cigaal ma aheyn heesaha guryosamo iyo durdurkii kaliya marka laba hees ayaa ka dhiman . midda kale riwaayaddii jacayl boob uma baahna oo seddex mar kala meteleen fanaaniinta kala dhinaca gabdhaha maandeeq, magool iyo khadra dahir , ragana tubeec iyo cigaal, marka waxaan u baahanay maandeeq oo qaadayso mininkiinnii, sida sida, neyruus, waqtigu na soo gaar, u hub qaado iyo waanwaan.waxaan kae oo aan baahanay heesaha oo ay maandeeq la qaado gaduudo carwo sida waa aduunyada filim ,wacaneey waaxdeydii midigee oo ay maandeeq la qaadayso amina cabdulaahi . marka maandeeq heesaheeda waa badan yahiin kuwa ay la qaado shankroon, hibo, magool, baxasn, qamar, saado,khadra dahir , zahra axmed iyo kuwa kale. marka heesaha maandeeq waa qayb ka mid qiimaha fanka soomaliyeed waayo codkeeda waa ka duwan yahay hablaha kale waayo waxuu ahaa cod dumar naxariis oo xabeed mac ku jrtay mar uu ka hadlaayey abwaan turaabi codadka dumarka waxuu cadeeyay in marwo mohamed inay aheyd maandeeqdii labaad marka halkaas waxaa ku cad maandeeq inay aheyd boqorada codka hablaha soomaaliyeed, waxaana loo baahan yahay in buug laga qoro waayo waa qiimo weyn oo ka mid tiirarka fanka soomaaliyeed. thanks. waahwaah heesaha faadumo cabdulaahi ay la qaado ragga oo aad u fara badan islamarkaana kuwa ay la qaado hablaha waaberi oo aad u fara badan laga bilaabo ilaa hadda waxaan maqalnay afar hees oo ay la qaado shankaroon , laba hees oo ay la qaado baxsan, amina cabdulaahi iyo zahra axmed oo ay la qaaday labo hees, sidoo kale oo ay maandeeq la qaaday khadra dahir, qalanjo, qamar, saado cali, binti cumar gacal,cadar kaahin,hibo mohamed,magool, duniya, faadumo qasim, caasho cabdow, gaduudo carwo iyo kuwa kale oo badan marka maandeeq meeqa hees ay qaaday jawaabta waa badan yahiin qaraami wadani jacayl. marka waxaan codsaneynaa inaan maqlno kulli thanks.
+waxaan codsananeynaa inaan maqalno heesahii ay qaaday showgii maandeeq oo ahaay dadka muusik tumaayey kulli hablo cod iyo mmqaal waxayna aheyd fikrad fariid ah oo ka duwan fanaaniinta kale waayo maandeeq waxay leedahay xis dareen iyo cod dumar xeraga meesha ka haysto qofna keeni karin thanks.
 
 == da,da maandeeq ==
 
