*Empty MediaWiki Message*

--- a/Wacbuudhan_Abgaal.mw
+++ b/Wacbuudhan_Abgaal.mw
@@ -41,6 +41,7 @@ Wacbuudhan abgaal dadka ugu caansan waxaan kamid ah.
 SIYAASIYIINTA:
 
 *Raisulwasaarihii dowladii TFG Mudane Nur Xasan Xusen (Nur Adde)
+*Siyaasi Gudoomiye Cali Ugas Cabdulle
 *Siyaasi Senator Muse Sudi Yalaxow
 *Siyaasi Gudoomiye Cumar Finish
 *Siyaasi Amb. Maxamed Cali America
