--- a/Cawramale.mw
+++ b/Cawramale.mw
@@ -1,18 +1,10 @@
-[[File:SSC insignia.jpg|thumb|calan harti waqooyi]]
-'''Cawrmale''' [[Af-Ingiriisi]] 'Awramale' [[Af-Carabi]] "عورملي" waa  qabiil ka mida  beelwaynta [[Warsangali]] waxay badanaa deegaan ku yihiin gobollada koonfurta [[soomaaliya]], [[Jubbada Hoose]], [[Jubbada Dhexe]], [[Baay]], [[Bakool]] [[Gedo]], [[Shabeellaha Dhexe]] [[Sanaag]], [[Hiiraan]] iyo [[Banaadir]]...
+
+'''Cawrmale''' [[Af-Ingiriisi]] 'Awramale' [[Af-Carabi]] "عورملي" waa  qabiil ka mida  beelwaynta [[Samaale]] waxay badanaa deegaan ku yihiin gobollada koonfurta [[soomaaliya]], [[Jubbada Hoose]], [[Jubbada Dhexe]], [[Baay]], [[Bakool]] [[Gedo]], [[Shabeellaha Dhexe]] [[Sanaag]], [[Hiiraan]] iyo [[Banaadir]]...
 
 Beeshu waa qabiilka ugu tunka wayn beelaha dega jubbada hoose waxayna dhaqataa oo ay leedahay noocyada kala duwan ee xoolaha nafleyda ah sida Geela, lo'da, iyo Ariga Geela ayayna dadkeedu badanaa aad u dhaqdaan.
 
 Beesha waxay sidoo kale deegtaa Raaxoole oo ah deegaan wayne dhaca gobolka Baay waana deegaanka labaad ee ay beeshu deegaan ahaan ku badan tahay waxaa kale oo ay beeshu degtaa dhulka Soomaalida NFD ee Waqooyi bari Kenya.
 
-Boqortooyada Cawramale Cismaan Ibraahim waxa uu ka mid yahay beelwaynta Warsangali waxaana uu u kala baxaa 1 (Garlabo) 2 (Gabooleen) iyo 3 Cirinte loona yaqaan Colmarabe.
+Boqortooyada Cawramale Cismaan Ibraahim waxa uu ka mid yahay beelwaynta Samaale waxaana uu u kala baxaa 1 (Garlabo) 2 (Gabooleen) iyo 3 Cirinte loona yaqaan Colmarabe.
 
-Beeshu waxay Koonfurta [[Soomaaliya]] dhaqan wadaag ku yihiin beesha [[Samaale]] oo ka mid ah dadka soomaaliyeed waana beel ay inka badan 5 [[Qarni]] wada deganaayeen.
-
-'''Abtirsiga beesha Cawramale ee Warsangeli'''
-----Beesha Cawramale waxay u abtirsadaan sida soo socota
-
-[[Cawramale]]•Cismaan•Ibraahim•xamar gale•Dhidhiin•Kooge•warma'eke•[[Warsangali]]• [[Maxamuud harti]]•Koombe•Kablalax•[[Daarood]]
-[[Category:Warsangali]]
-[[Category:Harti]]
-[[Category:Daarood]]
+Beeshu waxay Koonfurta [[Soomaaliya]] dhaqan wadaag ku yihiin beelaha kale ee Samaale oo ka mid ah dadka soomaaliyeed waana beel ay inka badan 5 [[Qarni]] wada deganaayeen.
