*Empty MediaWiki Message*

--- a/Dhulbare.mw
+++ b/Dhulbare.mw
@@ -2,7 +2,7 @@
 [[File:World map with equator.jpg|thumb|Dhulbare]]
 [[File:Equator and Prime Meridian.svg|thumb||center|1000px|Wadanada uu dhexmaro xariiqda ''Dhulbadhaha'' (casaan) iyo wadanada uu dhex maro xariiqda Meridian (buluug)]]
 
-'''Dhulbadhe''', '''Dhulbare''' ({{lang-en|equator}}; {{lang-ar|خط الاستواء}}) waa xariiq toosan oo ku soo wareegta goobada [[meere]] taasi oo u kala qeybisa labo gobol.
+'''Dhulbadhe''', '''Dhulbare''' ({{lang-en|equator}}; {{lang-ar|خط الاستواء}}) waa xariiq qaloocanoo ku soo meereesto soo wareegta goobada [[meere]] taasi oo u kala qeybisa labo gobol.
 
 Sida caadiga ah, ''Dhulbadhe'' waa xariiq khiyaali ah oo [[dhul]]ka u qeybisa [[Cidhifka Waqooyi]] iyo [[Cidhifka Koonfur]]. Sidoo kale, xariiqda dhulbadhuhu waxay leedahay dherer dhan 40,075 km; taasi 78.7% ka mid ah dhex marto [[bad|biyaha badaha]] iyo 21.3% oo dhul dhex marta.
 
