--- a/Gaalkacyo.mw
+++ b/Gaalkacyo.mw
@@ -87,7 +87,7 @@ Gaalkacyo waxay leedahay cimilo kulul.  Heerkulkaugu kulul wuxuu dhacaa inta lag
 == Qabiilada dagga ==
 [15]
 Waqooyiga gaalkacyo waxaa daga Leelkase, majeerteen  'Cumar-maxamuud, reer biciidyahan, Wagardhac, Amaanlle, Arab Saalix iyo Awrtable 
-dhanka koonfurta galmudug waxaana daga Habar gidir sacad , Dir, Madhibaan Gorgaate, Iyo  shiiqaal ). Qabiilka ugu badan ee daga gobalka mudug waa Darood . 
+dhanka koonfurta galmudug waxaana daga Habar gidir sacad , Dir, Madhibaan Gorgaate, Iyo  shiiqaal ). Qabiilka ugu badan ee daga gobalka mudug waa Habar gidir . 
  
 Gaalkacyo waxaa lagu qiyaasaa inay daganyihiin 545,000 oo qof.
 
