*Empty MediaWiki Message*

--- a/Yalho.mw
+++ b/Yalho.mw
@@ -7,7 +7,7 @@
 | motto                  = 
 | image_skyline          = [[File:Yalho valley.jpg|thumb|Togga yalho]]
 | imagesize              = 
-| image_caption          = Dooxa Yahlo
+| image_caption          = 
 | image_flag             = 
 | flag_size              = 
 | image_seal             = 
@@ -20,7 +20,7 @@
 | pushpin_label_position = bottom
 | pushpin_mapsize        = 
 | pushpin_map_caption    = Meesha ka dhacdo Soomaaliya
-| coordinates            = {{coord|11|28|16|N|49|52|26|E|region:SO-BR|display=inline,title}}
+| coordinates            =
 | subdivision_type       = 
 | subdivision_name       = {{flag|Somalia}}
 * {{flag|Puntland}}
