*Empty MediaWiki Message*

--- a/Bulaxaar.mw
+++ b/Bulaxaar.mw
@@ -1,5 +1,6 @@
 '''Bulaxaar''' waa magaalo xeebeed oo qadiim ah oo ku taalo gobolka [[Saaxil]] ee [[somaliland]]. Degmada waxay kutaala xeebta [[buurta almis]].
-Bulxaar waxaa ku badan beesha [[Abokor ciise muuse]] ee [[Habarjeclo]]. 
+Bulxaar waxaa ku badan beesha [[Abokor ciise muuse]] ee [[HabarAwal]].
+
 ==Taariikh==
 Bulxaar  waa degmo qadiim ah waxay magaalada [[Berbera]] ujirtaa 70km 
 [[Hargeisa]] oo ka xigto dhinaca waqooyi beri waxay u jirtaa 170km 
