--- a/Talk:Bogga_Hore.mw
+++ b/Talk:Bogga_Hore.mw
@@ -257,9 +257,15 @@ waxan jeclahay  inaan halkaan kuso gunaanadno qormadeena maanta 
 
 waxana idinlasoo wadaagi doonaa xog intaan ka dheeraad ah iyo qoraalo ay rewbeen [[User:Shiiqaaladeer|Shiiqaaladeer]] ([[User talk:Shiiqaaladeer|talk]]) 12:31, 24 Agoosto 2019 (UTC)
 
-== Midnima doon ==
+== Eng daahir sahal ali ==
 
-Soomaaliya mexey ka midoobi la'dahay? [[User:Yuusuf cabdalle|Yuusuf cabdalle]] ([[User talk:Yuusuf cabdalle|talk]]) 16:06, 24 Agoosto 2019 (UTC)
+waa kuma daahir sahal cali ? [[User: dahir sahal ali|daahir sahal]] ([[User talk:xaalka soomaaliya iyo xirfadaha computer science |talk]]) 11:02, 13 Agoosto 2020 (UTC)
+daahir  sahal ali wuxuu ku dhashay degmada domco oo ku yaal deegaanka soomaalida degmada domco waxay ka tirsantahay gobolka doolo ee deegaanka soomaalida 
+dugsi quraankiisii wuxuu ku soo qaatay degmada domco ilaa hoose dhexe dugsiga sare wuxuu ku bartay degmada domco 
+markii danbena wuxuu ka dhameeyey gobolka qoraxay magalada qabridahare sidoo kale halkaas ayuu ka bilaabay kuliyada xirfada isaga oo ka bartay faculty ga IT ga halkaas ayuuna ka qaatay shahaada kowaad ee jamaacada mudo ka muxuu degree kale ka qaatay jaamacada puntland state university ee magaalada garowe 
+shahaada labaad ee jaamacada ayuu ka diyaariyay jaamacada Mahatma Gandhi International Hindi University ee wadanka hindiya 
+si khaas ah cyber security and CCNI
+daahir wuxu ka shaqeeya wadankiisa wuxuuna cilmigiisa uga faideeya dadkisa
 
 == Buur Hakaba ==
 
