*Empty MediaWiki Message*

--- a/Talk:Hargeysa.mw
+++ b/Talk:Hargeysa.mw
@@ -4,3 +4,5 @@ burco
 
 Qofkii bogan qoray wuxuu ahaa mid aan aqoon u lahayn sida wax loogu qoro Wikipedia han. Waxaan isku dayi inaan hagaajiyo oon ka saaro qoraalada khaldan iyo magacyada ku faanaya boga.
 [[User:Made4me|Made4me]] ([[User talk:Made4me|talk]]) 20:45, 16 Sebteembar 2015 (UTC)
+
+Walal boggana si aan cilmiyeysnayn Ayaad u qortay marka waxbadan baan ka hagaajinaya [[User:Maxamuud cali|Maxamuud cali]] ([[User talk:Maxamuud cali|wadahadal]]) 18:28, 13 Agoosto 2020 (UTC)
