*Empty MediaWiki Message*

--- a/Isgaadhsiinta_Somaliland.mw
+++ b/Isgaadhsiinta_Somaliland.mw
@@ -2,7 +2,7 @@
 [[File:Somalia-Somaliland.png|thumb|right|Maabka Somaliland]]
 
 '''Isgaadhsiinta Somaliland''' ({{lang-en|Telecommunications in Somaliland}}) waa nidaamka iyo habka isgaadhsiinta [[Telefonka gacanta|telefanka]] taasi oo inta ugu badan ay maamulaan [[shirkad|shirkado si gaar ah]] loo leeyahay.
-Shirkadaha ugu caansan ee ka howlgala [[Somaliland]] waxaa ka mid ah: [[Telesom]], [[NationLink Telecom]], [[Somtel]], [[SomCable]].
+Shirkadaha ugu caansan ee ka howlgala [[Somaliland]] waxaa ka mid ah: [[Telesom]], [[NationLink]], [[Telecom]], [[Somtel]], [[SomCable]].
 
 == Wada shaqaynta Shirkadaha ==
 
