*Empty MediaWiki Message*

--- a/Ximan_&_xeeb.mw
+++ b/Ximan_&_xeeb.mw
@@ -1,5 +1,6 @@
-'''Ximan iyo Xeeb''' waa maamul goboleed ka mid ah maamul goboleedyada [[Soomaaliya]], waxa uuna ku yaalaa batamaha soomaaliya, gaar ahaan gobolka [[Galguduud]] iyo [[Mudug]].waa maamul aad dagan oo nabad ka dhaliyay dhulka uu ka taliyo waana maamul hoos laga soo dhisay oo dadku ay dhisteen horumar wayn aayuu ku tilaabsaday intii uu dhisnaa waxaana caasimad u ah Magaalada labaad ee Soomaaliya ugu nabdoon Cadaado
-{{Infobox Region|waxaa gobalka galgaduud la aasasay 1890kii waxaana loo yaqaanay caradii gaduudneed waliba waxay caan ku tahay (uraniomka) waxa ayna ku jitaa caasimada gobalka waxaama baaritaan kaasna lagusameeyay xiligii dowladii dhaxe jirtay waxaana sameyay Dawladdaha kala ah mareykanka iyo ingiriiska  waxaana la samneeyay 2008dii 
+'''Ximan iyo Xeeb''' waa maamul goboleed ka mid ah maamul goboleedyada [[Soomaaliya]], waxa uuna ku yaalaa batamaha soomaaliya, gaar ahaan gobolka [[Galguduud]] iyo [[Mudug]]. Waa maamul aad u dagan oo nabad ka dhaliyay dhulka uu ka taliyo, waana maamul hoos laga soo dhisay oo dadku ay dhisteen. Horumar wayn aayuu ku tilaabsaday intii uu dhisnaa waxaana caasimad u ah Magaalada labaad ee Soomaaliya ugu nabdoon Cadaado.
+{{Infobox Region|Waxaa gobalka Galgaduud la aasasay 1890kii waxaana loo yaqaanay caradii gaduudneed waliba waxay caan ku tahay (uraniomka) waxa ayna ku jirtaa caasimada gobalka, waxaa baaritaan kaasna lagusameeyay xiligii dowladii dhaxe jirtay. Dawladdaha kala ah mareykanka iyo ingiriiska ayaa sameeyay cilmibaarista,  waxaana la samneeyay 2008-dii.
+
 http://en.wikipedia.org/wiki/File:Coat_of_arms_of_Somalia.png
 name_local = Galgaduud|
 region_type = Gobolka|
