--- a/Baay.mw
+++ b/Baay.mw
@@ -27,10 +27,10 @@ Gobbalka Bay waa meesha ugu fiican ee Quraanka kariimka lagu barto Soomaaliya.
 
 == Degmooyi[[Bardaale]]==
 
-*[[Misira bay|Misire]]
+*[[Toosweyne bay|Toosweyne]]
 * [[Ufurow]]
 
-
+● kurtun● foolfayle 
 
 Gobolka Bay magaalamadaxdiisu waa Baydhabo, dhaqaalihiisuna wuxuu ku tiirsan yahay beeraha, xoolaha nool iyo ganacsiga. Magaalada Bydhabo waxay ka kooban tahay afar xaafadood oo kala ah:
 * Isha
