--- a/Template:Degmooyinka_Gobolka_Baay.mw
+++ b/Template:Degmooyinka_Gobolka_Baay.mw
@@ -9,7 +9,7 @@
 * [[Buurhakaba]]
 * [[Diinsoor]]
 * [[Qansax dheere]]
-* [[Ufuroow]]
+* [[toosweyne]]
 * [[Bardaale]]
 * [[Alol Lamma Gad]]
 }}<includeonly>{{#switch: {{PAGENAME}} | Baay = [[Category: Baay|Gobolka Baay]] | #default = [[Category: Baay | ]] [[Category:Gobolada Soomaaliya]]}}</includeonly><!--
