*Empty MediaWiki Message*

--- a/Galmudug.mw
+++ b/Galmudug.mw
@@ -44,7 +44,7 @@
 |Symbol = [[File:White star on green.gif|left|30px]]{{spaces|2}}Xiddig
 |Website = https://galmudug.gov.so}}
 
-'''Galmudug State''' ([[Arabic]]: ''غامدوغ''), ({{lang-it|Galmudugh}}, officially '''Galmudug State''' ''(''[[Somali language|Somali]]'': Dowlad goboleedka Galmudug ee Soomaaliya)'' waa dowlad goboleed ka tirsan Jamhuuriyadda Federaalka [[Soomaaliya]], taasoo magaala madaxdeedu tahay [[Dhusamareb]]. Galmudug waxay xuduud la wadaagtaa dhanka waqooyi dowlad goboleedka [[Puntland]], halka dhanka galbeed ay deris kala tahay [[dhulka soomalidda ethiopia]], dhanka koonfur waxay deris la tahay dowlad goboleedka [[Hirshabelle]], iyadoo dhanka beri deris kala ah [[Badweynta Hindiya]]. 
+'''Galmudug State''' ([[Arabic]]: ''غامدوغ''), ({{lang-it|Galmudugh}}, officiall '''Galmudug Government''' ''(''[[Somali language|Somali]]'': Dowladda Galmudug ee Soomaaliya)'' waa dowlad Xumin ka'ah  Jamhuuriyadda Federaalka [[Soomaaliya]], taasoo magaala madaxdeedu tahay [[Dhusamareb]]. Galmudug waxay xuduud la wadaagtaa dhanka waqooyi dowlad goboleedka [[Puntland]], halka dhanka galbeed ay deris kala tahay [[dhulka soomalidda ethiopia]], dhanka koonfur waxay deris la tahay dowlad goboleedka [[Hirshabelle]], iyadoo dhanka beri deris kala ah [[Badweynta Hindiya]]. 
 
 Waardiyaha galmudug ee la yidhaahdo ''ciidanka daraawiishta Galmudug'', waxaa loogu magac daray qaranka [[Dhulbahante]] uu [[Sayyidka]] hogaaminayay oo caasimada ahayd [[Taleex]] waqtiga gumeysiga.
 
